[package]
name = "basian_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rayon = "1.5"
dashmap = "5.5.3"
num_cpus = "1.16.0"
anyhow = "1.0"
itertools = "0.12.1"
petgraph = "0.6"
dot = "0.1"
chrono = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dot-parser = "0.1"
graphlib = "0.6.3"
statrs = "0.15"